# MultiMC5

./: .gitignore  BUILD.md  CMakeLists.txt  COPYING.md  README.md  changelog.md
api/gui/: CMakeLists.txt  DesktopServices.h
api/gui/icons/: IconList.cpp  IconList.h  MSMCIcon.cpp  MSMCIcon.h
api/logic/: BaseInstaller.cpp  BaseInstaller.h  BaseInstance.cpp  BaseInstance.h  BaseVersion.h  BaseVersionList.cpp  BaseVersionList.h  CMakeLists.txt  Commandline.cpp  Commandline.h  Env.cpp  Env.h  Exception.h  FileSystem.h  FileSystem_test.cpp  Filter.h  GZip.h  InstanceCopyTask.h  InstanceCreationTask.h  InstanceImportTask.cpp  InstanceImportTask.h  InstanceList.cpp  InstanceList.h  InstanceTask.h  Json.h  LoggedProcess.cpp  LoggedProcess.h  MSMCStrings.cpp  MSMCStrings.h  MSMCZip.cpp  MSMCZip.h  MessageLevel.cpp  MessageLevel.h  NullInstance.h  ProblemProvider.h  RecursiveFileSystemWatcher.h  Version.h  Version_test.cpp
api/logic/icons/: IIconList.h  IconUtils.h
api/logic/java/: JavaChecker.h  JavaCheckerJob.cpp  JavaCheckerJob.h  JavaInstall.cpp  JavaInstallList.cpp  JavaInstallList.h  JavaUtils.cpp  JavaUtils.h  JavaVersion.cpp  JavaVersion.h
api/logic/launch/: LaunchStep.cpp  LaunchStep.h  LaunchTask.cpp  LaunchTask.h  LogModel.h
api/logic/meta/: BaseEntity.cpp  BaseEntity.h  Index.cpp  Index.h  JsonFormat.cpp  JsonFormat.h  Version.cpp  Version.h  VersionList.cpp  VersionList.h
api/logic/minecraft/: Component.h  LaunchProfile.cpp  LaunchProfile.h  Library.h  MinecraftInstance.cpp  MinecraftInstance.h  MinecraftLoadAndCheck.h  MinecraftUpdate.cpp  MinecraftUpdate.h  MojangDownloadInfo.h  MojangVersionFormat.cpp  MojangVersionFormat.h  OneSixVersionFormat.cpp  OpSys.cpp  OpSys.h  PackProfile.cpp  PackProfile.h  (+10 more)
application/: CMakeLists.txt  ColorCache.h  GuiUtil.cpp  HoeDown.h  InstancePageProvider.h  InstanceProxyModel.cpp  InstanceWindow.cpp  InstanceWindow.h  JavaCommon.cpp  LaunchController.cpp  LaunchController.h  MainWindow.cpp  MainWindow.h  MultiMC.cpp  MultiMC.h  MultiServerMC.cpp  MultiServerMC.h  UpdateController.cpp  VersionProxyModel.cpp  main.cpp
application/dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CopyInstanceDialog.cpp  CopyInstanceDialog.h  CustomMessageBox.cpp  CustomMessageBox.h  ExportInstanceDialog.cpp  ExportInstanceDialog.h  IconPickerDialog.cpp  IconPickerDialog.h  LoginDialog.ui  NewComponentDialog.cpp  NewComponentDialog.h  NewInstanceDialog.cpp  NewInstanceDialog.h  ProgressDialog.cpp  ProgressDialog.h  UpdateDialog.cpp  UpdateDialog.h  UpdateDialog.ui  VersionSelectDialog.cpp  VersionSelectDialog.h
application/groupview/: GroupView.cpp  GroupView.h  GroupedProxyModel.cpp  GroupedProxyModel.h  InstanceDelegate.cpp  InstanceDelegate.h  VisualGroup.cpp  VisualGroup.h
application/package/linux/: MultiServerMC  multiservermc.desktop
application/package/rpm/: MultiMC5.spec  README.md
application/package/ubuntu/: README.md
application/package/ubuntu/multimc/usr/share/metainfo/: multimc.metainfo.xml
application/package/ubuntu/multiservermc/DEBIAN/: control
application/package/ubuntu/multiservermc/opt/multimc/: run.sh
application/package/ubuntu/multiservermc/usr/share/applications/: multimc.desktop
application/package/ubuntu/multiservermc/usr/share/metainfo/: multimc.metainfo.xml
application/pagedialog/: PageDialog.cpp  PageDialog.h
application/pages/: BasePage.h  BasePageProvider.h
application/pages/global/: CustomCommandsPage.cpp  CustomCommandsPage.h  ExternalToolsPage.cpp  ExternalToolsPage.h  JavaPage.cpp  JavaPage.h  LanguagePage.cpp  LanguagePage.h  MinecraftPage.cpp  MinecraftPage.h  MinecraftPage.ui  MultiMCPage.cpp  MultiMCPage.ui  MultiServerMCPage.cpp  MultiServerMCPage.h  MultiServerMCPage.ui  PasteEEPage.cpp  PasteEEPage.h  PasteEEPage.ui  ProxyPage.cpp  ProxyPage.h  ProxyPage.ui
application/pages/instance/: GameOptionsPage.h  InstanceSettingsPage.cpp  InstanceSettingsPage.h  InstanceSettingsPage.ui  LegacyUpgradePage.cpp  LegacyUpgradePage.h  LegacyUpgradePage.ui  LogPage.cpp  LogPage.h  LogPage.ui  ModFolderPage.cpp  ModFolderPage.h  NotesPage.h  OtherLogsPage.cpp  OtherLogsPage.h  ServersPage.cpp  VersionPage.cpp  VersionPage.h  WorldListPage.cpp  WorldListPage.h
application/pages/modplatform/: ImportPage.cpp  ImportPage.h  VanillaPage.cpp  VanillaPage.h
application/pages/modplatform/atlauncher/: AtlFilterModel.cpp  AtlListModel.cpp  AtlPage.cpp  AtlPage.h
application/pages/modplatform/flame/: FlameModel.cpp  FlamePage.cpp  FlamePage.h
application/pages/modplatform/ftb/: FtbFilterModel.cpp  FtbListModel.cpp  FtbPage.h
application/pages/modplatform/legacy_ftb/: ListModel.cpp  Page.cpp  Page.h
application/pages/modplatform/technic/: TechnicData.h  TechnicModel.cpp  TechnicModel.h  TechnicPage.cpp  TechnicPage.h
application/resources/: MultiMC.manifest  multiservermc.rc
application/resources/multiservermc/: index.theme  multiservermc.qrc
application/setupwizard/: JavaWizardPage.cpp  LanguageWizardPage.cpp  SetupWizard.cpp  SetupWizard.h
application/themes/: ITheme.cpp
application/widgets/: CustomCommands.h  CustomCommands.ui  JavaSettingsWidget.cpp  LabeledToolButton.cpp  LabeledToolButton.h  LanguageSelectionWidget.cpp  LanguageSelectionWidget.h  MCModInfoFrame.cpp  MCModInfoFrame.h  ModListView.cpp  ModListView.h  PageContainer.cpp  PageContainer.h  PageContainer_p.h  ServerStatus.cpp  VersionListView.cpp  VersionListView.h  VersionSelectWidget.h
buildconfig/: BuildConfig.cpp.in  BuildConfig.h
cmake/UnitTest/: TestUtil.h  test.manifest  test.rc
libraries/: README.md
libraries/classparser/: CMakeLists.txt
libraries/iconfix/: CMakeLists.txt  xdgicon.h
libraries/launcher/: CMakeLists.txt
libraries/launcher/net/minecraft/: Launcher.java
libraries/launcher/org/multimc/onesix/: OneSixLauncher.java
libraries/launcher/org/multiservermc/: EntryPoint.java  Launcher.java  LegacyFrame.java  NotFoundException.java  ParamBucket.java  ParseException.java  Utils.java
libraries/launcher/org/multiservermc/onesix/: OneSixLauncher.java
libraries/rainbow/: CMakeLists.txt
(+108 files in other folders)
